--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<iframe src="img.html" width="1920" height="600" frameborder="0" allowfullscreen>
+							<iframe src="img.html" width="1920" height="600" frameborder="0" allowfullscreen></iframe>
 						</header>
 							
 					</div>
