--- a/elements.html
+++ b/elements.html
@@ -25,7 +25,9 @@
 
 <!-- Main -->
 			<div id="main">
-			<h1>測試</h1>
+				<header class="align-center">
+					<h1>測試</h1>
+				</header>
 			</div>
 
 <!-- Footer -->
