--- a/elements.html
+++ b/elements.html
@@ -24,11 +24,16 @@
 			</nav>
 
 <!-- Main -->
-			<div id="main">
-				<header class="align-center">
-					<h1>測試</h1>
-				</header>
-			</div>
+		<div id="main">
+			<section id="banner" data-video="images/banner">
+				<div class="inner">
+					<header class="align-center">
+						<iframe src="img.html" width="1920" height="600" frameborder="0" allowfullscreen></iframe>
+					</header>
+				</div>			
+			</section>	
+		</div>
+
 
 <!-- Footer -->
 			<footer id="footer">
