--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
 					<li><a href="elements.html">測試</a></li>
 				</ul>
 			</nav>
-
+	<div id="main">
 			<!-- Banner -->
+			
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<iframe src="img.html" width="1920" height="600" frameborder="0" allowfullscreen></iframe>
+							<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
+							</iframe>
 						</header>
 							
 					</div>
 				</section>
+	</div>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
