--- a/elements.html
+++ b/elements.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 <style>
-	.iframe-body-sty{position: relative;overflow: hidden;height:600px;width: 1200px;background-color: red;}
+	.iframe-body-sty{position: relative;overflow: hidden;height:600px;width: 1200px;}
 	.iframe-body-sty>#iframe-shrink{position: absolute;transform:scale(0.55);left: -400px;top: -170px;}
 </style>
 
@@ -34,7 +34,7 @@
 					<header class="align-center">
 						<h1>測試</h1>
 						<div class="iframe-body-sty">
-							<iframe id="iframe-shrink" src="img.html" width="1920" height="600" frameborder="0" allowfullscreen>
+							<iframe id="iframe-shrink" src="img.html" width="1920px" height="920px" frameborder="0" allowfullscreen>
 							</iframe>
 						</div>
 					</header>		
