--- a/elements.html
+++ b/elements.html
@@ -31,10 +31,10 @@
 <!-- Main -->
 		<div id="main">
 		
-					<header class="align-center">
+					<header>
 						<h1>測試</h1>
 						<div class="iframe-body-sty">
-							<iframe id="iframe-shrink" src="img.html" width="1920px" height="920px" frameborder="0" allowfullscreen>
+							<iframe id="iframe-shrink" src="img.html" width="640vh" height="480vh" frameborder="0" allowfullscreen>
 							</iframe>
 						</div>
 					</header>		
