--- a/elements.html
+++ b/elements.html
@@ -30,14 +30,18 @@
 
 <!-- Main -->
 		<div id="main">
-		
-					<header>
-						<h1>測試</h1>
-						<div class="iframe-body-sty">
-							<iframe id="iframe-shrink" src="img.html" width="640vh" height="480vh" frameborder="0" allowfullscreen>
+			<section class="wrapper style1">
+					<div class="inner">
+						<header class="align-center">
+							<h2>測試</h2>	
+						</header>
+						<div class="video">
+							<div class="video-wrapper">
+							<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
 							</iframe>
-						</div>
-					</header>		
+							</div>
+						</div>	
+				</section>
 	
 		</div>
 
