--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
-							</iframe>
+							<div class="video">
+								<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
+								</iframe>
+							</div>	
 						</header>
-							
 					</div>
 				</section>
 	</div>
