--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div id="main">
 			<!-- Banner -->
 			
-				<section id="banner" data-video="images/banner">
+				<section id="banner" data-video="images/skytree">
 					<div class="inner">
 						<header>
 							<div class="video">
