--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 					<div class="inner">
 						<header>
 							<div class="video">
-								<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
-								</iframe>
+								<div class="video-wrapper">
+									<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
+									</iframe>
+								</div>
 							</div>	
 						</header>
 					</div>
