--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 			
 				<section id="banner" data-video="images/skytree">
 					<div class="inner">
-						<div class="video-wrapper">
-							<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
-							</iframe>
-						</div>
+						<header class="align-center">
+							<div class="video">
+								<div class="video-wrapper">
+								<iframe src="img.html" width="640" height="480" frameborder="0" allowfullscreen>
+								</iframe>
+								</div>
+							</div>
+						</header>
 					</div>
 				</section>
 	</div>
