--- a/img.html
+++ b/img.html
@@ -67,6 +67,10 @@
 				<img data-u="image" src="img/05.jpg" />
 				<img data-u="thumb" src="img/thumb-05.jpg" />
 			</div>
+			<div data-p="144.50" style="display: none;">
+				<img data-u="image" src="img/06.jpg" />
+				<img data-u="thumb" src="img/thumb-06.jpg" />
+			</div>
 
 			<a data-u="any" href="http://www.jssor.com" style="display:none">Image Gallery</a>
 		</div>
@@ -161,8 +165,9 @@
 </script>
 
 <div style="text-align:center;clear:both">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<!-- <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
 <script src="/follow.js" type="text/javascript"></script>
+ -->
 </div>
 
 </body>
