--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <body class="subpage">
 <!-- Header -->
 			<header id="header">
-				<h1><a href="Home.jsp"><img src="images/logo.jpg"></a></h1>  <!-- LOGO -->
+				<h1><a href="index.html"><img src="images/logo.jpg"></a></h1>  <!-- LOGO -->
 				<a href="#menu">選單</a> <!-- 設置選單 -->
 			</header>
 
 <!-- Nav -->
 			<nav id="menu">                                  		<!-- 選單  -->
 				<ul class="links">
-					<li><a href="Home.jsp">首頁</a></li> 				<!-- 首頁 -->      
+					<li><a href="index.html">首頁</a></li> 				<!-- 首頁 -->      
 					<li><a href="shopping.html">購物</a></li>			<!-- 購買 -->
 					<li><a href="bgch.html">背景圖片</a></li>			<!-- 背景圖片 -->
 					<li><a href="location.html">咖啡機地點</a></li>		<!-- 咖啡機地點 -->
