--- a/machinelist.html
+++ b/machinelist.html
@@ -55,14 +55,14 @@
 <body class="subpage">
 <!-- Header -->
 			<header id="header">
-				<h1><a href="Home.jsp"><img src="images/logo.jpg"></a></h1>
+				<h1><a href="index.html"><img src="images/logo.jpg"></a></h1>
 				<a href="#menu">選單</a>
 			</header>
 
 <!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="Home.jsp">首頁</a></li>
+					<li><a href="index.html">首頁</a></li>
 					<li><a href="shopping.html">購物</a></li>
 					<li><a href="bgch.html">背景圖片</a></li>
 					<li><a href="location.html">咖啡機地點</a></li>
