--- a/shopping.html
+++ b/shopping.html
@@ -2,6 +2,7 @@
 <html>									<!-- 購物網頁  -->
 	<head>
 		<title>技業資訊股份有限公司-購物</title>
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,14 +32,15 @@
 	</head>
 <body class="subpage">
 			<header id="header">
-				<h1><a href="index.html"><img src="images/logo.jpg"></a></h1>
+				<h1><a href="Home.html"><img src="images/logo.jpg"></a></h1>
 				<a href="#menu">選單</a>
 			</header>
 <!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">首頁</a></li>
+					<li><a href="Home.html">首頁</a></li>
 					<li><a href="shopping.html">購物</a></li>
+					<li><a href="coupon.html">優惠券</a></li>
 					<li><a href="bgch.html">背景圖片</a></li>
 					<li><a href="location.html">咖啡機地點</a></li>
 					<li><a href="machinelist.html">機器訊息</a></li>
@@ -73,11 +75,8 @@
 				</section> -->
 <!-- Two -->
 			<section id="bgcoffee2" data-video="images/52112">
-					<section class="wrapper ">
-						<div class="inner">
-		 						 <p id="Products"></p>
-						</div>
-				</section>
+						
+		 				 <p id="Products"></p>			
 			</section>	
 		</div>
 <!-- Footer -->
