--- a/shopping.html
+++ b/shopping.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/getproducts.js"></script>
+		<!-- <script type="text/javascript" src="js/getproducts.js"></script> -->
 		<style>
 			.hex-cell {
 			  overflow: hidden;
@@ -76,7 +76,7 @@
 <!-- Two -->
 			<section id="bgcoffee2" data-video="images/52112">
 						
-		 				 <p id="Products"></p>			
+		 				 <table width="100%"><tbody><tr><td><img src="http://res.massburg.net/group1/M00/00/1B/rBjfS1v84CeAQcrdAAA_UCVfk_g589.jpg"></td></tr><tr><td><h3>品名：熱美式咖啡</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy0" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/1B/rBjfS1v84ESAUl2PAABOou5tMPU737.jpg"></td></tr><tr><td><h3>品名：熱卡布奇諾</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy1" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/1B/rBjfS1v84DaATiKmAABB-VBk0hY158.jpg"></td></tr><tr><td><h3>品名：熱拿鐵咖啡</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy2" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/1B/rBjfS1v84GKAaGy6AAA-Xxa6mps394.jpg"></td></tr><tr><td><h3>品名：熱巧克力</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy3" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/1B/rBjfS1v84AyACvdqAABAF2dhN7c238.jpg"></td></tr><tr><td><h3>品名：熱經典奶茶</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy4" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/5C/rBjfS14gNYCAGohHAAD058EBHUU231.png"></td></tr><tr><td><h3>品名：熱麥胚芽牛奶</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy5" type="button" style="VISIBILITY: hidden" value="購買"></td></tr><tr><td><img src="http://res.massburg.net/group1/M00/00/1A/rBjfS1v80PiAbzZ2AABABmYo8RQ524.jpg"></td></tr><tr><td><h3>品名：熱杏仁茶</h3></td></tr><tr><td><s>原價：49元</s> <font color="red">特價：30元</font></td></tr><tr><td><input name="購買" id="buy6" type="button" style="VISIBILITY: hidden" value="購買"></td></tr></tbody></table>			
 			</section>	
 		</div>
 <!-- Footer -->
