--- a/machinelist.html
+++ b/machinelist.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/getmachinelist.js"></script>
+		<!-- <script type="text/javascript" src="js/getmachinelist.js"></script> -->
 		<style>
 			body_1 {
 			  --l: calc(100vw/var(--n-cols));
@@ -77,7 +77,7 @@
 						<header class="align-center">
 							<h2>機器訊息</h2>
 						</header>
-						<p id="Machinelist"></p>
+						<table width="100%"><thead><tr align="center"><td align="center"><h1>機器名稱</h1></td><td align="center"><h1>機器碼</h1></td><td align="center"><h1>放置地址</h1></td><td align="center"><h1>目前狀態</h1></td></tr></thead><tbody><tr align="center"><td align="center">CIC中型機</td><td align="center">CIC</td><td align="center">高雄市三民區澄清路325號</td><td align="center">正常</td></tr></tbody></table>
 						<!-- <body_1 style="--n-rows: 3; --n-cols: 6;">
 								  <style>.hex-cell:nth-of-type(5n + 1) { grid-column-start: 2 }</style>
 								  <div class="hex-cell"><img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?w=650&amp;fm=jpg"/></div>
