--- a/location.html
+++ b/location.html
@@ -79,6 +79,18 @@
 										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.26846848267664!2d120.36220146404717!3d22.568048876145184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e1cdc5dbaf32b%3A0x45d9f87d283429a9!2z5peF6aOf5biC6ZuG!5e0!3m2!1szh-TW!2stw!4v1580980548812!5m2!1szh-TW!2stw" width="100%" height="500vh" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 									</div>
 								
+									<p class="caption">
+										<h2>胡麻園明誠店</h2>
+									</p>
+									<p class="caption">
+										<h3>地址：高雄市左營區自由二路195號</h3>
+									</p>
+									<p class="caption">
+										<h3>電話：07-556-4739</h3>
+									</p>
+									<div class="image fit">
+										<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7363.6245925578805!2d120.308757!3d22.660786!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x944e6351b3793db1!2z6YaJ5pa55L6_Lea7t-iCiemjryjog6HpurvlnJLmmI7oqqDlupcp!5e0!3m2!1szh-TW!2stw!4v1590571469168!5m2!1szh-TW!2stw" width="100%" height="500vh" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+									</div>
 					
 									<p class="caption">
 										<h2>地球村比利時自助洗衣烘衣</h2>
