--- a/location.html
+++ b/location.html
@@ -37,12 +37,8 @@
 <!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="Home.html">首頁</a></li>
-					<li><a href="shopping.html">購物</a></li>
-					<li><a href="coupon.html">優惠券</a></li>
-					<li><a href="bgch.html">背景圖片</a></li>
+					<li><a href="location.html">首頁</a></li>
 					<li><a href="location.html">咖啡機地點</a></li>
-					<li><a href="machinelist.html">機器訊息</a></li>
 				</ul>
 			</nav>
 
