--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
 										<h2>技業資訊股份有限公司</h2>
 									</p>
 									<p class="caption">
-										<h3>地址：高雄市三民區澄清路325號</h3>
+										<h3>高雄市三民區澄清路325號</h3>
 									</p>
 									<p class="caption">
 										<h3>電話：07-389-2365</h3>
@@ -66,7 +66,7 @@
 										<h2>Vita Cafe 小港門市</h2>
 									</p>
 									<p class="caption">
-										<h3>地址：高雄市小港區漢民路725號</h3>
+										<h3>高雄市小港區漢民路725號</h3>
 									</p>
 									<p class="caption">
 										<h3>電話：07-806-0553</h3>
@@ -79,7 +79,7 @@
 										<h2>胡麻園明誠店</h2>
 									</p>
 									<p class="caption">
-										<h4>地址：高雄市左營區自由二路195號</h4>
+										<h4>高雄市左營區自由二路195號</h4>
 									</p>
 									<p class="caption">
 										<h3>電話：07-556-4739</h3>
@@ -92,7 +92,7 @@
 										<h2>地球村比利時自助洗衣烘衣</h2>
 									</p>
 									<p class="caption">
-										<h3>地址：台南市北區勝利路230號</h3>
+										<h3>台南市北區勝利路230號</h3>
 									</p>
 									<p class="caption">
 										<h3>電話：0936247256</h3>
